[gd_scene load_steps=56 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player/stand.png" type="Texture" id=2]
[ext_resource path="res://player/jab.png" type="Texture" id=3]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/crouch.png" type="Texture" id=6]
[ext_resource path="res://player/crouch_kick.png" type="Texture" id=7]
[ext_resource path="res://player/block.png" type="Texture" id=8]
[ext_resource path="res://player/hitstun.png" type="Texture" id=9]
[ext_resource path="res://player/crouch_block.png" type="Texture" id=10]
[ext_resource path="res://player/jump.png" type="Texture" id=11]
[ext_resource path="res://player/jump_kick.png" type="Texture" id=12]
[ext_resource path="res://player/grab.png" type="Texture" id=13]
[ext_resource path="res://player/kick.png" type="Texture" id=14]
[ext_resource path="res://player/jump_jab.png" type="Texture" id=15]
[ext_resource path="res://player/sweep.png" type="Texture" id=16]
[ext_resource path="res://player/roundhouse.png" type="Texture" id=17]
[ext_resource path="res://player/aa_punch.png" type="Texture" id=18]
[ext_resource path="res://player/jump_kick2.png" type="Texture" id=19]
[ext_resource path="res://player/throw.png" type="Texture" id=20]
[ext_resource path="res://Throw.gd" type="Script" id=21]
[ext_resource path="res://player/throw_fireball.png" type="Texture" id=22]
[ext_resource path="res://ThrowFireball.gd" type="Script" id=23]
[ext_resource path="res://Fireball.tscn" type="PackedScene" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 100 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 115 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 13 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 58, 21 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 61, 61 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 54, 18 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 69, 19 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 42, 77 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 47, 23 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 78, 24 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 44, 73 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 72, 55 )

[sub_resource type="Animation" id=13]
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/2A/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/2A/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=14]
resource_name = "2B"
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/2B/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/2B/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=15]
resource_name = "2C"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/2C/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/2C/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=16]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/5A/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/5A/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=17]
resource_name = "5B"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/5B/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/5B/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=18]
resource_name = "5C"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/5C/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/5C/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=19]
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=20]
length = 99999.0
loop = true

[sub_resource type="Animation" id=21]
length = 99999.0
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Crouch/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=22]
loop = true

[sub_resource type="Animation" id=23]
resource_name = "Fireball"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Fireball/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pivot/Fireball")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "throw_fireball"
} ]
}

[sub_resource type="Animation" id=24]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Grab/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Grab/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=25]
length = 99999.0
loop = true

[sub_resource type="Animation" id=26]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/JA/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/JA/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=27]
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/JB/Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=28]
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/JC/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/JC/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=29]
length = 0.06
step = 0.02
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "jump"
} ]
}

[sub_resource type="Animation" id=30]
loop = true

[sub_resource type="Animation" id=31]
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Throw/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Throw/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Throw/Point:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 59, -19 ), Vector2( -30, -52 ), Vector2( 112, 6 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Pivot/Throw")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "grab"
}, {
"args": [  ],
"method": "release"
} ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
GRAVITY = 80

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Hurtbox" parent="Pivot" instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Hurtbox"]
shape = SubResource( 2 )

[node name="Stand" type="Node2D" parent="Pivot"]

[node name="Sprite" type="Sprite" parent="Pivot/Stand"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Crouch" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/Crouch"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 2
frame = 1

[node name="Air" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/Air"]
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="Jump" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/Jump"]
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="Block" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/Block"]
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="CrouchBlock" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/CrouchBlock"]
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Hitstun" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/Hitstun"]
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="5A" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/5A"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
offset = Vector2( 16, 0 )
hframes = 3
frame = 1

[node name="Hitbox" parent="Pivot/5A" instance=ExtResource( 4 )]
damage = 14
chip_mod = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/5A/Hitbox"]
position = Vector2( 40, -34 )
shape = SubResource( 3 )
disabled = true

[node name="5B" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/5B"]
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )
offset = Vector2( 16, 0 )
hframes = 3
frame = 1

[node name="Hitbox" parent="Pivot/5B" instance=ExtResource( 4 )]
damage = 14
chip_mod = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/5B/Hitbox"]
position = Vector2( 54, 41 )
shape = SubResource( 4 )
disabled = true

[node name="5C" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/5C"]
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )
offset = Vector2( 32, 0 )
hframes = 3

[node name="Hitbox" parent="Pivot/5C" instance=ExtResource( 4 )]
damage = 14
chip_mod = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/5C/Hitbox"]
position = Vector2( 102, -13 )
shape = SubResource( 5 )
disabled = true

[node name="2A" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/2A"]
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
offset = Vector2( 16, 0 )
hframes = 3
frame = 2

[node name="Hitbox" parent="Pivot/2A" instance=ExtResource( 4 )]
chip_mod = 0.1
guard = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/2A/Hitbox"]
position = Vector2( 36, 97 )
shape = SubResource( 6 )
disabled = true

[node name="2B" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/2B"]
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )
offset = Vector2( 32, 0 )
hframes = 3

[node name="Hitbox" parent="Pivot/2B" instance=ExtResource( 4 )]
chip_mod = 0.1
guard = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/2B/Hitbox"]
position = Vector2( 70, 99 )
shape = SubResource( 7 )
disabled = true

[node name="2C" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/2C"]
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )
hframes = 3

[node name="Hitbox" parent="Pivot/2C" instance=ExtResource( 4 )]
chip_mod = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/2C/Hitbox"]
position = Vector2( 42, -61 )
shape = SubResource( 8 )
disabled = true

[node name="JA" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/JA"]
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
offset = Vector2( 8, 0 )
hframes = 2

[node name="Hitbox" parent="Pivot/JA" instance=ExtResource( 4 )]
guard = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/JA/Hitbox"]
position = Vector2( 55, -14 )
shape = SubResource( 9 )
disabled = true

[node name="JB" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/JB"]
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
offset = Vector2( 16, 0 )

[node name="Hitbox" parent="Pivot/JB" instance=ExtResource( 4 )]
guard = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/JB/Hitbox"]
position = Vector2( 40, 60 )
shape = SubResource( 10 )
disabled = true

[node name="JC" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/JC"]
scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
hframes = 2

[node name="Hitbox" parent="Pivot/JC" instance=ExtResource( 4 )]
guard = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/JC/Hitbox"]
position = Vector2( 51, 76 )
shape = SubResource( 11 )
disabled = true

[node name="Grab" type="Node2D" parent="Pivot"]
visible = false

[node name="Sprite" type="Sprite" parent="Pivot/Grab"]
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )
hframes = 3

[node name="Hitbox" parent="Pivot/Grab" instance=ExtResource( 4 )]
damage = 0
chip_mod = 0.1
guard = 3
on_hit_action = "Throw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Grab/Hitbox"]
position = Vector2( 56, -18 )
shape = SubResource( 12 )
disabled = true

[node name="Throw" type="Node2D" parent="Pivot"]
visible = false
script = ExtResource( 21 )

[node name="Sprite" type="Sprite" parent="Pivot/Throw"]
scale = Vector2( 2, 2 )
texture = ExtResource( 20 )
offset = Vector2( 16, 0 )
hframes = 3

[node name="Hitbox" parent="Pivot/Throw" instance=ExtResource( 4 )]
damage = 14
chip_mod = 0.1
guard = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Throw/Hitbox"]
position = Vector2( 126, 22 )
shape = SubResource( 12 )
disabled = true

[node name="Point" type="Node2D" parent="Pivot/Throw"]
position = Vector2( 59, -19 )

[node name="Fireball" type="Node2D" parent="Pivot"]
visible = false
script = ExtResource( 23 )
Projectile = ExtResource( 24 )

[node name="Sprite" type="Sprite" parent="Pivot/Fireball"]
scale = Vector2( 2, 2 )
texture = ExtResource( 22 )
hframes = 3
frame = 1

[node name="Point" type="Node2D" parent="Pivot/Fireball"]
position = Vector2( 72, -32 )

[node name="Actions" type="AnimationPlayer" parent="."]
anims/2A = SubResource( 13 )
anims/2B = SubResource( 14 )
anims/2C = SubResource( 15 )
anims/5A = SubResource( 16 )
anims/5B = SubResource( 17 )
anims/5C = SubResource( 18 )
anims/Air = SubResource( 19 )
anims/Block = SubResource( 20 )
anims/Crouch = SubResource( 21 )
anims/CrouchBlock = SubResource( 22 )
anims/Fireball = SubResource( 23 )
anims/Grab = SubResource( 24 )
anims/Hitstun = SubResource( 25 )
anims/JA = SubResource( 26 )
anims/JB = SubResource( 27 )
anims/JC = SubResource( 28 )
anims/Jump = SubResource( 29 )
anims/Stand = SubResource( 30 )
anims/Throw = SubResource( 31 )

[node name="TimerStun" type="Timer" parent="."]
one_shot = true

[node name="TimerHitstop" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="Actions" to="." method="action_end"]
[connection signal="timeout" from="TimerStun" to="." method="stun_end"]
[connection signal="timeout" from="TimerHitstop" to="." method="hitstop_end"]
